rPing: add logo to header in index, log view, and failed logs pages

--- a/static/failed_logs.html
+++ b/static/failed_logs.html
@@ -13,7 +13,9 @@
 </head>
 <body>
     <div class="header">
-        <h1>RustPing - Failed Logs</h1>
+        <div class="logo">
+        <img src="logo.png" alt="RustPing Logo">
+    </div>
         <div class="filter-container">
             <a href="/static/index.html" class="nav-link">Dashboard</a>
             <a href="/static/log_view.html" class="nav-link">Live Logs</a> <!-- Removed 'active' class -->
