--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
   <div class="header">
-    <h1>RustPing</h1>
+    <div class="logo">
+        <img src="logo.png" alt="RustPing Logo">
+    </div>
     <div class="filter-container">
       <input type="text" id="filterInput" placeholder="Filter by name/IP..." />
       <button id="filterButton"><i class="fas fa-filter"></i> Filter</button>
