--- a/static/log_view.html
+++ b/static/log_view.html
@@ -14,7 +14,9 @@
 </head>
 <body>
     <div class="header">
-        <h1>RustPing - Live Logs</h1>
+        <div class="logo">
+        <img src="logo.png" alt="RustPing Logo">
+    </div>
         <div class="filter-container">
             <a href="/static/index.html" class="nav-link">Dashboard</a>
             <a href="/static/failed_logs.html" class="nav-link">Failed Logs</a>
