--- a/static/index.html
+++ b/static/index.html
@@ -1,102 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RustPing | Home</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
-    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="icon" href="favicon.png" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RustPing | Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
-  <div class="header">
-    <div class="logo">
-        <img src="logo.png" alt="RustPing Logo">
-    </div>
-    <div class="filter-container">
-      <input type="text" id="filterInput" placeholder="Filter by name/IP..." />
-      <button id="filterButton"><i class="fas fa-filter"></i> Filter</button>
-      <button id="clearFilterButton"><i class="fas fa-times"></i> Clear</button>
-      <button id="logViewButton" onclick="window.location.href='log_view.html'"><i class="fas fa-file-alt"></i> Live Logs</button>
-      <button id="failedLogsButton" onclick="window.location.href='failed_logs.html'"><i class="fas fa-exclamation-triangle"></i> Failed Logs</button>
-    </div>
-    <div class="dark-mode-toggle" onclick="toggleDarkMode()">
-      <i class="fas fa-moon"></i>
-    </div>
-  </div>
+    <div class="app-container">
+        <header class="header">
+             <div class="logo">
+                <a href="/" class="logo-link">
+                    <img src="logo-dark.png" alt="RustPing Logo" id="logoImage">
+                    <span class="app-name">RustPing</span>
+                 </a>
+            </div>
+            <nav class="navigation">
+                <input type="text" id="filterInput" placeholder="Filter by name/IP..." class="filter-input">
+                <button id="filterButton" class="nav-button"><i class="fas fa-filter"></i></button>
+                <button id="clearFilterButton" class="nav-button"><i class="fas fa-times"></i></button>
+                <a href="log_view.html" class="nav-link" id="logViewButton"><i class="fas fa-file-alt"></i> Live Logs</a>
+                <a href="failed_logs.html" class="nav-link" id="failedLogsButton"><i class="fas fa-exclamation-triangle"></i> Failed Logs</a>
+            </nav>
+            <div class="dark-mode-toggle" onclick="toggleDarkMode()">
+                <i class="fas fa-moon"></i>
+            </div>
+        </header>
 
-  <div class="dashboard">
-    <div class="table-container">
-      <table id="devices-table">
-        <thead>
-          <tr>
-            <th>Device Name</th>
-            <th>IP Address</th>
-            <th>Sensors Used</th>
-            <th>Ping Status</th>
-            <th>Bandwidth (Mbps)</th>
-            <th>HTTP Status</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- Device rows go here -->
-        </tbody>
-      </table>
+        <main class="main-content">
+            <section class="table-section">
+                <div class="table-container">
+                    <table id="devices-table">
+                        <thead>
+                            <tr>
+                                <th class="sortable" data-sort="name">Device Name <i class="fas fa-sort"></i></th>
+                                <th class="sortable" data-sort="ip">IP Address <i class="fas fa-sort"></i></th>
+                                <th>Sensors Used</th>
+                                <th class="sortable" data-sort="ping_status">Ping Status <i class="fas fa-sort"></i></th>
+                                <th class="sortable" data-sort="bandwidth_usage">Bandwidth (Mbps) <i class="fas fa-sort"></i></th>
+                                <th class="sortable" data-sort="http_status">HTTP Status <i class="fas fa-sort"></i></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Device data will be inserted here -->
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+
+            <section class="charts-section">
+                <div class="chart-card">
+                    <h2 class="chart-title">Bandwidth Usage</h2>
+                    <div class="chart-container">
+                        <canvas id="bandwidthChart"></canvas>
+                    </div>
+                </div>
+                <div class="chart-card">
+                    <h2 class="chart-title">Sensor Distribution</h2>
+                    <div class="chart-container">
+                        <canvas id="devicePieChart"></canvas>
+                    </div>
+                </div>
+            </section>
+
+            <section class="log-export-section">
+                <div class="card">
+                    <h2 class="section-title">Generate Log Export</h2>
+                    <form id="logForm">
+                        <div class="form-group">
+                            <label for="logDevices">Device Names (comma-separated)</label>
+                            <input type="text" id="logDevices" name="logDevices" placeholder="e.g., Device1, Device2">
+                        </div>
+                        <div class="form-group">
+                            <label for="startDate">Start Date (UTC)</label>
+                            <input type="date" id="startDate" name="startDate">
+                        </div>
+                        <div class="form-group">
+                            <label for="endDate">End Date (UTC)</label>
+                            <input type="date" id="endDate" name="endDate">
+                        </div>
+                        <div class="form-group">
+                            <label for="logFormat">Export Format</label>
+                            <select id="logFormat" name="logFormat">
+                                <option value="txt">TXT</option>
+                                <option value="csv">CSV</option>
+                            </select>
+                        </div>
+                        <button type="button" id="generateLogButton" class="button primary-button">
+                            <i class="fas fa-download"></i> Generate Log
+                        </button>
+                    </form>
+                </div>
+            </section>
+        </main>
+
+        <footer class="footer">
+            © Copyright 2025. All rights reserved. Developed by KARTHIK LAL.
+        </footer>
     </div>
 
-    <div class="charts">
-      <div class="chart-box">
-        <div class="chart-container">
-          <canvas id="bandwidthChart"></canvas>
-        </div>
-      </div>
-      <div class="chart-box">
-        <div class="chart-container">
-          <canvas id="devicePieChart"></canvas>
-        </div>
-      </div>
-    </div>
-    
-    <!-- Redesigned Log Export Section -->
-    <div class="card log-export">
-      <h2>Generate Log Export</h2>
-      <form id="logForm">
-        <div class="form-group">
-          <label for="logDevices">Device Names</label>
-          <input type="text" id="logDevices" name="logDevices" placeholder="e.g. Device 1, Device 2" />
-          <small>(leave empty for all)</small>
-        </div>
-        <div class="form-group">
-          <label for="startDate">Start Date (UTC)</label>
-          <input type="date" id="startDate" name="startDate" />
-        </div>
-        <div class="form-group">
-          <label for="endDate">End Date (UTC)</label>
-          <input type="date" id="endDate" name="endDate" />
-        </div>
-        <div class="form-group">
-          <label for="logFormat">Export Format</label>
-          <select id="logFormat" name="logFormat">
-            <option value="txt">TXT</option>
-            <option value="csv">CSV</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <button type="button" id="generateLogButton" class="action-button">
-            <i class="fas fa-download"></i> Generate Log
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <div class="footer">
-    © Copyright 2025 . All rights reserved. Developed by KARTHIK LAL.
-  </div>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
