--- a/static/index.html
+++ b/static/index.html
@@ -72,8 +72,8 @@
                     <h2 class="section-title">Generate Log Export</h2>
                     <form id="logForm">
                         <div class="form-group">
-                            <label for="logDevices">Device Names (comma-separated)</label>
-                            <input type="text" id="logDevices" name="logDevices" placeholder="e.g., Device1, Device2">
+                            <label for="logDevices">Device Names or IP Addresses (comma-separated)</label>
+                            <input type="text" id="logDevices" name="logDevices" placeholder="e.g., Device1, 192.168.0.100">
                         </div>
                         <div class="form-group">
                             <label for="startDate">Start Date (UTC)</label>
