--- a/static/log_view.html
+++ b/static/log_view.html
@@ -15,8 +15,8 @@
     <div class="app-container">
     <header class="header">
         <div class="logo">
-                <a href="/" class="logo-link">
-                    <img src="logo-dark.png" alt="RustPing Logo" id="logoImage"> <!- -  Initial Logo (Dark Mode Default - change to logo-light.png if light mode default) - ->
+                <a href="javascript:void(0)" onclick="reloadCurrentPage()" class="logo-link">
+                    <img src="logo-dark.png" alt="RustPing Logo" id="logoImage">
                     <span class="app-name">RustPing</span>
                  </a>
             </div>
