--- a/static/login.html
+++ b/static/login.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <script src="config.js"></script>
+    <script src="login.js"></script>
 </head>
 <body>
     <div class="app-container"> <!-- Added app-container for header/footer -->
@@ -60,7 +62,5 @@
             © Copyright 2025. All rights reserved. Developed by KARTHIK LAL.
         </footer>
     </div>
-
-    <script src="login.js"></script>
 </body>
 </html>
