--- a/static/failed_logs.html
+++ b/static/failed_logs.html
@@ -15,7 +15,7 @@
     <div class="app-container">
         <header class="header">
             <div class="logo">
-                <a href="/" class="logo-link">
+                <a href="javascript:void(0)" onclick="reloadCurrentPage()" class="logo-link">
                     <img src="logo-dark.png" alt="RustPing Logo" id="logoImage">
                     <span class="app-name">RustPing</span>
                  </a>
