rPing: fix session management and implement inactivity detection and redirect for unauthorized access
- Fixed issues related to authLogin
- Fixed 401 error popup while working with the dashboard
- Forcefully redirect to login page when session timeout
- Fixed dashboard logout button color hex

Change-Id: 0eb4827264de9d56b00bf62514b0de37f18800fe, 30b404f6d92885b4c8a5cf9a75af542a91da562d

Signed-off-by: KARTHIK LAL "<dev@karthiklal.in>"

--- a/static/log_view.html
+++ b/static/log_view.html
@@ -112,13 +112,44 @@
             });
         }
 
+        // Function to reload the current page
+        function reloadCurrentPage() {
+        window.location.reload();
+        }
+        
+        // Check authentication and setup inactivity detection
+document.addEventListener('DOMContentLoaded', function() {
+    if (!document.cookie.includes('auth=true')) {
+        window.location.href = '/static/login.html';
+        return;
+    }
+    
+    // Reset inactivity timer on user activity
+    let inactivityTimer;
+    const TIMEOUT_MINUTES = 15;
+
+    function resetInactivityTimer() {
+        clearTimeout(inactivityTimer);
+        inactivityTimer = setTimeout(logout, TIMEOUT_MINUTES * 60 * 1000);
+    }
+
+    ['click', 'keypress', 'scroll', 'mousemove'].forEach(event => {
+        document.addEventListener(event, resetInactivityTimer);
+    });
+    resetInactivityTimer();
+});
+
+function logout() {
+    document.cookie = "auth=true; max-age=0; path=/";
+    window.location.href = '/static/login.html';
+}
+
         function updateLogo(isDarkMode) {
           const logo = document.getElementById('logoImage');
           if (logo) {
             logo.src = isDarkMode ? 'logo-dark.png' : 'logo-light.png'; // Corrected Logic!
           }
         }
-
 
         function toggleDarkMode() {
             const body = document.body;
