--- a/static/failed_logs.html
+++ b/static/failed_logs.html
@@ -139,6 +139,38 @@
           }
         }
 
+        // Function to reload the current page
+        function reloadCurrentPage() {
+        window.location.reload();
+        }
+        
+        // Check authentication and setup inactivity detection
+document.addEventListener('DOMContentLoaded', function() {
+    if (!document.cookie.includes('auth=true')) {
+        window.location.href = '/static/login.html';
+        return;
+    }
+    
+    // Reset inactivity timer on user activity
+    let inactivityTimer;
+    const TIMEOUT_MINUTES = 15;
+
+    function resetInactivityTimer() {
+        clearTimeout(inactivityTimer);
+        inactivityTimer = setTimeout(logout, TIMEOUT_MINUTES * 60 * 1000);
+    }
+
+    ['click', 'keypress', 'scroll', 'mousemove'].forEach(event => {
+        document.addEventListener(event, resetInactivityTimer);
+    });
+    resetInactivityTimer();
+});
+
+function logout() {
+    document.cookie = "auth=true; max-age=0; path=/";
+    window.location.href = '/static/login.html';
+}
+
         function toggleDarkMode() {
             const body = document.body;
             body.classList.toggle('dark-mode');
