--- a/static/login.html
+++ b/static/login.html
@@ -15,10 +15,10 @@
     <div class="app-container"> <!-- Added app-container for header/footer -->
         <header class="header">
             <div class="logo">
-                <a href="/" class="logo-link">
+                <a href="javascript:void(0)" onclick="reloadCurrentPage()" class="logo-link">
                     <img src="logo-light.png" alt="RustPing Logo" id="logoImage">
                     <span class="app-name">RustPing</span>
-                </a>
+                 </a>
             </div>
             <div class="dark-mode-toggle" onclick="toggleDarkMode()">
                 <i class="fas fa-moon"></i>
