rPing: add category filtering for devices in the UI and update device model
Signed-off-by: KARTHIK LAL "<dev@karthiklal.in>"

--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,11 @@
 
         <main class="main-content">
             <section class="table-section">
+                <div class="category-filter">
+                    <button class="category-btn active" data-category="all">All Devices</button>
+                    <div class="category-buttons">
+                    </div>
+                </div>
                 <div class="table-container">
                     <table id="devices-table">
                         <thead>
