--- a/static/index.html
+++ b/static/index.html
@@ -83,11 +83,11 @@
                             <input type="text" id="logDevices" name="logDevices" placeholder="e.g., Device1, 192.168.0.100">
                         </div>
                         <div class="form-group">
-                            <label for="startDate">Start Date (UTC)</label>
+                            <label for="startDate">Start Date</label>
                             <input type="date" id="startDate" name="startDate">
                         </div>
                         <div class="form-group">
-                            <label for="endDate">End Date (UTC)</label>
+                            <label for="endDate">End Date</label>
                             <input type="date" id="endDate" name="endDate">
                         </div>
                         <div class="form-group">
