rPing: add device management page and update logo; enhance device JSON structure
- Added front-end for users to add/edit devices
- Non-Structured code (Will fix)

Signed-off-by: KARTHIK LAL "<dev@karthiklal.in>"

--- a/static/log_view.html
+++ b/static/log_view.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="logo">
                 <a href="javascript:void(0)" onclick="reloadCurrentPage()" class="logo-link">
-                    <img src="logo-dark.png" alt="RustPing Logo" id="logoImage">
+                    <img src="logo-light.png" alt="RustPing Logo" id="logoImage">
                     <span class="app-name">RustPing</span>
                  </a>
             </div>
