--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
         <header class="header">
              <div class="logo">
                 <a href="javascript:void(0)" onclick="reloadCurrentPage()" class="logo-link">
-                    <img src="logo-dark.png" alt="RustPing Logo" id="logoImage">
+                    <img src="logo-light.png" alt="RustPing Logo" id="logoImage">
                     <span class="app-name">RustPing</span>
                  </a>
             </div>
@@ -25,6 +25,7 @@
                 <button id="clearFilterButton" class="nav-button"><i class="fas fa-times"></i></button>
                 <a href="log_view.html" class="nav-link" id="logViewButton"><i class="fas fa-file-alt"></i> Live Logs</a>
                 <a href="failed_logs.html" class="nav-link" id="failedLogsButton"><i class="fas fa-exclamation-triangle"></i> Failed Logs</a>
+                <a href="manage-devices.html" class="nav-link" id="manageDevicesButton"><i class="fas fa-server"></i> Manage Devices</a>
                 <button onclick="resetPassword()" class="nav-button"><i class="fas fa-key fa-fw icon-space"></i> Reset Password</button>
                 <button onclick="logout()" class="nav-button logout-button"><i class="fas fa-sign-out-alt"></i> Logout</button>
             </nav>
