--- a/static/manage-devices.html
+++ b/static/manage-devices.html
@@ -6,7 +6,7 @@
     <title>RustPing | Device Management</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">  <!-- Make sure this styles.css is the SAME as the one used by index.html -->
+    <link rel="stylesheet" href="manage-device.css">  <!-- Make sure this styles.css is the SAME as the one used by index.html -->
     <link rel="icon" href="favicon.png" type="image/x-icon"> <!-- Added favicon -->
 </head>
 <body>
